--- a/server/dashboard/templates/dashboard/dev-front.html
+++ b/server/dashboard/templates/dashboard/dev-front.html
@@ -24,7 +24,7 @@
             {% csrf_token %}
             <input type="hidden" id="dev-command" value="create-debug-study" name="dev-command" />
             <div class="form-group mb-2">
-                Create N studies with random names.
+                Create N debug-studies with random names.
             </div>
             <div class="form-group mx-sm-3 mb-2">
                 <input type="text" class="form-control" id="number_of_studies" name="number_of_studies" placeholder="ex) 10">
@@ -41,7 +41,21 @@
                 Create N debug-cohorts per study.
             </div>
             <div class="form-group mx-sm-3 mb-2">
-                <input type="text" class="form-control" id="number_of_cohorts" name="number_of_cohorts" placeholder="ex) 10">
+                <input type="text" class="form-control" id="number_of_cohorts" name="number_of_cohorts" placeholder="ex) 2">
+            </div>
+            <button type="submit" class="btn btn-primary mb-2">Create</button>
+        </form>
+    </li>
+
+    <li>
+        <form class="form-inline" action="{% url 'dashboard-dev-generic' %}" method="POST" role="form">
+            {% csrf_token %}
+            <input type="hidden" id="dev-command" value="create-debug-participant" name="dev-command" />
+            <div class="form-group mb-2">
+                Create N debug-participants per cohort.
+            </div>
+            <div class="form-group mx-sm-3 mb-2">
+                <input type="text" class="form-control" id="number_of_participants" name="number_of_participants" placeholder="ex) 100">
             </div>
             <button type="submit" class="btn btn-primary mb-2">Create</button>
         </form>
@@ -54,6 +68,17 @@
                 Clear all debug studies.
             </div>
             <input type="hidden" id="dev-command" value="clear-debug-study" name="dev-command" />
+            <button type="submit" class="btn btn-primary mb-2">Clear</button>
+        </form>
+    </li>
+
+    <li>
+        <form class="form-inline" action="{% url 'dashboard-dev-generic' %}" method="POST" role="form">
+            {% csrf_token %}
+            <div class="form-group mb-2">
+                Clear all debug participants.
+            </div>
+            <input type="hidden" id="dev-command" value="clear-debug-participant" name="dev-command" />
             <button type="submit" class="btn btn-primary mb-2">Clear</button>
         </form>
     </li>
