--- a/server/dashboard/templates/dashboard/dev-front.html
+++ b/server/dashboard/templates/dashboard/dev-front.html
@@ -65,9 +65,21 @@
         <form class="form-inline" action="{% url 'dashboard-dev-generic' %}" method="POST" role="form">
             {% csrf_token %}
             <div class="form-group mb-2">
-                Clear all debug studies.
+                Clear all debug participants. (only works when the debug cohorts are alive)
             </div>
-            <input type="hidden" id="dev-command" value="clear-debug-study" name="dev-command" />
+            <input type="hidden" id="dev-command" value="clear-debug-participant" name="dev-command" />
+            <button type="submit" class="btn btn-primary mb-2">Clear</button>
+        </form>
+    </li>
+
+
+    <li>
+        <form class="form-inline" action="{% url 'dashboard-dev-generic' %}" method="POST" role="form">
+            {% csrf_token %}
+            <div class="form-group mb-2">
+                Clear all participants starting with "id".
+            </div>
+            <input type="hidden" id="dev-command" value="clear-debug-participant-id" name="dev-command" />
             <button type="submit" class="btn btn-primary mb-2">Clear</button>
         </form>
     </li>
@@ -76,12 +88,13 @@
         <form class="form-inline" action="{% url 'dashboard-dev-generic' %}" method="POST" role="form">
             {% csrf_token %}
             <div class="form-group mb-2">
-                Clear all debug participants.
+                Clear all debug studies.
             </div>
-            <input type="hidden" id="dev-command" value="clear-debug-participant" name="dev-command" />
+            <input type="hidden" id="dev-command" value="clear-debug-study" name="dev-command" />
             <button type="submit" class="btn btn-primary mb-2">Clear</button>
         </form>
     </li>
+
 
 
 </ul>
