organized dev/f, moved dev feats to new service

--- a/server/dashboard/static/dashboard/style.css
+++ b/server/dashboard/static/dashboard/style.css
@@ -44,3 +44,7 @@ i.icon-error {
     background-repeat: no-repeat;
     background-position: center center;
 }
+
+.cardmargin {
+    margin: 1rem 15px 0;
+}
