Changed implementation to PushMessageService module

--- a/server/dashboard/templates/dashboard/dev-front.html
+++ b/server/dashboard/templates/dashboard/dev-front.html
@@ -206,7 +206,7 @@
                 <h4>Tools</h4>
             </button>
         </div>
-        <div id="collapse5" class="collapse cardmargin show" aria-labelledby="heading5" data-parent="#accordion">
+        <div id="collapse5" class="collapse cardmargin" aria-labelledby="heading5" data-parent="#accordion">
             <ul>
                 <li>
                     <form class="form-inline" action="{% url 'dashboard-dev-generic' %}" method="POST" role="form">
