--- a/server/dashboard/templates/dashboard/dev-front.html
+++ b/server/dashboard/templates/dashboard/dev-front.html
@@ -3,7 +3,7 @@
 {% load template_filters %}
 
 {% block content %}
-<h3>DevTest</h3>
+<h3><a href="{% url 'dashboard-dev-front' %}">DevTest v0.0.1</a></h3>
 {% if is_staff %}
 
 <div id="accordion" class="gap-3">
