Change morning message and weekly survey to progressively load data

--- a/client/src/pages/weekly-survey/barriers.component.html
+++ b/client/src/pages/weekly-survey/barriers.component.html
@@ -1,21 +1,23 @@
-<app-form
-    [formGroup]="form"
-    submitLabel="Next page"
-    (onSubmit)="nextPage()"
-    >
-    <app-select-multiple-field
-        formControlName="barriers"
-        label="Did any of the following make it difficult for you to be active this week?"
-        [options]="barrierOptions"
-        triggerName="Other barrier"
-        (triggered)="addBarrier()"
+<div *ngIf="ready">
+    <app-form
+        [formGroup]="form"
+        submitLabel="Next page"
+        (onSubmit)="nextPage()"
         >
-    </app-select-multiple-field>
-    <app-choice-field
-        formControlName="willBarriersContinue"
-        label="Is this barrier to being active likely to continue into next week?"
-        [options]="willCompleteOptions"
-    >
+        <app-select-multiple-field
+            formControlName="barriers"
+            label="Did any of the following make it difficult for you to be active this week?"
+            [options]="barrierOptions"
+            triggerName="Other barrier"
+            (triggered)="addBarrier()"
+            >
+        </app-select-multiple-field>
+        <app-choice-field
+            formControlName="willBarriersContinue"
+            label="Is this barrier to being active likely to continue into next week?"
+            [options]="willCompleteOptions"
+        >
 
-    </app-choice-field>
-</app-form>
+        </app-choice-field>
+    </app-form>
+</div>
