--- a/server/dashboard/templates/dashboard/participant-morning-messages.html
+++ b/server/dashboard/templates/dashboard/participant-morning-messages.html
@@ -11,60 +11,57 @@
 {% block content %}
 
 <h2>Morning Messages for {{participant.heartsteps_id}}</h2>
+{% if configuration.enabled %}
+{% if configuration.daily_task %}
+<p>Daily task last run {{configuration.daily_task.last_run_at|date}} at {{configuration.daily_task.last_run_at|time}}</p>
+{% else %}
+<p class="warning">Daily task is missing</p>
+{% endif %}
+<form action="" method="POST">
+    {% csrf_token %}
+    <input type="submit" value="Disable" />
+</form>
+{% else %}
+<form action="" method="POST">
+    {% csrf_token %}
+    <input type="submit" value="Enable" />
+</form>
+{% endif %}
 
-<table>
-    <thead>
-        <tr>
-            <th>Morning</th>
-            <th>Message</th>
-            <th>Survey</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for morning_message in morning_messages %}
-        <tr>
-            <td>
-                <dl>
-                    <dt>Date</dt>
-                    <dd>{{morning_message.date}}</dd>
-                    <dt>Sent:</dt>
-                    <dd>{{morning_message.sent}}</dd>
-                    <dt>Received</dt>
-                    <dd>{{morning_message.received}}</dd>
-                    <dt>Opened:</dt>
-                    <dd>{{morning_message.opened}}</dd>
-                    <dt>Completed</dt>
-                    <dd>{{morning_message.completed}}</dd>
-                </dl>
-            </td>
-            <td>
-                <dl>
-                    <dt>Notification</dt>
-                    <dd>{{morning_message.notification}}</dd>
-                    <dt>Message Framing</dt>
-                    <dd>{{morning_message.message_frame}}</dd>
-                </dl>
-            </td>
-            <td>
-                <dl>
-                    <dt>Survey Status</dt>
-                    <dd>{{morning_message.survey_status}}</dd>
-                    {% for question in morning_message.questions %}
-                        <dt>({{question.name}}) {{question.label}}</dt>
-                        {% if question.answer %}
-                        <dd>{{question.answer}}</dd>
-                        {% else %}
-                        <dd>Not Answered</dd>
-                        {% endif %}
-                    {% empty %}
-                        <dd>Questions missing</dd>
-                    {% endfor %}
-                </dl>
-            </td>
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
 
+<section>
+    {% for morning_message in morning_messages %}
+    <article>
+        <dl>
+            <dt>Date</dt>
+            <dd>{{morning_message.date}}</dd>
+            <dt>Sent:</dt>
+            <dd>{{morning_message.sent}}</dd>
+            <dt>Received</dt>
+            <dd>{{morning_message.received}}</dd>
+            <dt>Opened:</dt>
+            <dd>{{morning_message.opened}}</dd>
+            <dt>Completed</dt>
+            <dd>{{morning_message.completed}}</dd>
+            <dt>Notification</dt>
+            <dd>{{morning_message.notification}}</dd>
+            <dt>Message Framing</dt>
+            <dd>{{morning_message.message_frame}}</dd>
+            <dt>Survey Status</dt>
+            <dd>{{morning_message.survey_status}}</dd>
+            {% for question in morning_message.questions %}
+                <dt>({{question.name}}) {{question.label}}</dt>
+                {% if question.answer %}
+                <dd>{{question.answer}}</dd>
+                {% else %}
+                <dd>Not Answered</dd>
+                {% endif %}
+            {% empty %}
+                <dd>Questions missing</dd>
+            {% endfor %}
+        </dl>    
+    </article>
+{% endfor %}
+</section>
 
 {% endblock %}
