--- a/server/dashboard/templates/dashboard/dev-front.html
+++ b/server/dashboard/templates/dashboard/dev-front.html
@@ -3,332 +3,16 @@
 {% load template_filters %}
 
 {% block content %}
-<h3><a href="{% url 'dashboard-dev-front' %}">DevTest v0.0.1</a></h3>
+<h3><a href="{% url 'dashboard-dev-front' %}">DevTest v0.0.2</a></h3>
 {% if is_staff %}
 
 <div id="accordion" class="gap-3">
-    <div class="card">
-        <div class="card-header" id="heading1">
-            <button class="btn btn-link" data-toggle="collapse" data-target="#collapse1" aria-expanded="true" aria-controls="collapse1">
-                <h4>Study, Cohorts, Participants, Devices</h4>
-            </button>
-            List all items of "Participants" app (+Device) in a table view
-        </div>
-        <div id="collapse1" class="collapse cardmargin" aria-labelledby="heading1" data-parent="#accordion">
-            {% for study in studies %}
-                <h5><b>"{{study.name}}"</b> Study</h5>
-                <table class="table table-dark">
-                    <thead>
-                        <tr>
-                            <th scope="col">Cohort</th>
-                            <th scope="col">Participant</th>
-                            <th scope="col">Device</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for cohort in study.cohorts %}
-                            <tr>
-                                <td>{{cohort.name}}</td>
-                                <td></td>
-                                <td></td>
-                            </tr>
-                            {% for participant in cohort.participants %}
-                                <tr>
-                                    <td></td>
-                                    <td>{{participant.heartsteps_id}}</td>
-                                    <td> {{ participant.devices_text }} </td>
-                                </tr>
-                            {% endfor %}
-                        {% endfor %}
-                    </tbody>
-                </table>
-            {% endfor %}    
-        </div>
-    </div>
-
-
-    <div class="card">
-        <div class="card-header" id="heading2">    
-            <button class="btn btn-link" data-toggle="collapse" data-target="#collapse2" aria-expanded="true" aria-controls="collapse2">
-                <h4>Colleagues</h4>
-            </button>
-            Other users who are in "admins" lists of my studies
-        </div>
-        <div id="collapse2" class="collapse cardmargin" aria-labelledby="heading2" data-parent="#accordion">
-            <table class="table table-dark">
-                <thead>
-                    <tr><td>Username</td></tr>
-                </thead>
-                <tbody>
-                    {% if colleagues %}
-                        {% for colleague in colleagues %}
-                            <tr><td>{{ colleague.username }}</td></tr>
-                        {% endfor %}
-                    {% else %}
-                        <tr><td>No colleagues</td></tr>
-                    {% endif %}
-                </tbody>
-            </table>
-        </div>
-    </div>
-
-
-    <div class="card">
-        <div class="card-header" id="heading3">    
-            <button class="btn btn-link" data-toggle="collapse" data-target="#collapse3" aria-expanded="true" aria-controls="collapse3">
-                <h4>Create Debug Items</h4>
-            </button>Recommend not to do this in the real server.
-        </div>
-        <div id="collapse3" class="collapse cardmargin" aria-labelledby="heading3" data-parent="#accordion">
-            <ul>
-                <li>
-                    <form class="form-inline" action="{% url 'dashboard-dev-generic' %}" method="POST" role="form">
-                        {% csrf_token %}
-                        <input type="hidden" id="dev-command" value="create-debug-study" name="dev-command" />
-                        <div class="form-group mb-2">
-                            Create N debug-studies with random names.
-                        </div>
-                        <div class="form-group mx-sm-3 mb-2">
-                            <input type="text" class="form-control" id="number_of_studies" name="number_of_studies" placeholder="ex) 10">
-                        </div>
-                        <button type="submit" class="btn btn-primary mb-2">Create</button>
-                    </form>
-                </li>
-
-
-                <li>
-                    <form class="form-inline" action="{% url 'dashboard-dev-generic' %}" method="POST" role="form">
-                        {% csrf_token %}
-                        <input type="hidden" id="dev-command" value="create-debug-cohort" name="dev-command" />
-                        <div class="form-group mb-2">
-                            Create N debug-cohorts per study.
-                        </div>
-                        <div class="form-group mx-sm-3 mb-2">
-                            <input type="text" class="form-control" id="number_of_cohorts" name="number_of_cohorts" placeholder="ex) 2">
-                        </div>
-                        <button type="submit" class="btn btn-primary mb-2">Create</button>
-                    </form>
-                </li>
-
-                <li>
-                    <form class="form-inline" action="{% url 'dashboard-dev-generic' %}" method="POST" role="form">
-                        {% csrf_token %}
-                        <input type="hidden" id="dev-command" value="create-debug-participant" name="dev-command" />
-                        <div class="form-group mb-2">
-                            Create N debug-participants, Users, and Devices per cohort.
-                        </div>
-                        <div class="form-group mx-sm-3 mb-2">
-                            <input type="text" class="form-control" id="number_of_participants" name="number_of_participants" placeholder="ex) 100">
-                        </div>
-                        <button type="submit" class="btn btn-primary mb-2">Create</button>
-                    </form>
-                </li>
-
-            </ul>
-        </div>
-    </div>
-
-    <div class="card">
-        <div class="card-header" id="heading4">    
-            <button class="btn btn-link" data-toggle="collapse" data-target="#collapse4" aria-expanded="true" aria-controls="collapse4">
-                <h4>Clear Debug Studies, Cohorts, and Participants Under My Name [Danger]</h4>
-            </button>
-        </div>
-        <div id="collapse4" class="collapse cardmargin" aria-labelledby="heading4" data-parent="#accordion">
-            <ul>
-                <li>
-                    <form class="form-inline" action="{% url 'dashboard-dev-generic' %}" method="POST" role="form">
-                        {% csrf_token %}
-                        <div class="form-group mb-2">
-                            Clear all debug studies.
-                        </div>
-                        <input type="hidden" id="dev-command" value="clear-debug-study" name="dev-command" />
-                        <button type="submit" class="btn btn-primary mb-2">Clear</button>
-                    </form>
-                </li>
-
-
-                <li>
-                    <form class="form-inline" action="{% url 'dashboard-dev-generic' %}" method="POST" role="form">
-                        {% csrf_token %}
-                        <div class="form-group mb-2">
-                            Clear all debug participants. (only works when the parent debug cohorts are alive)
-                        </div>
-                        <input type="hidden" id="dev-command" value="clear-debug-participant" name="dev-command" />
-                        <button type="submit" class="btn btn-primary mb-2">Clear</button>
-                    </form>
-                </li>
-            </ul>
-            <h5>Debug objects to be deleted:
-                <table class="table table-dark">
-                <thead>
-                    <tr>
-                        <th scope="col">Study</th>
-                        <th scope="col">Cohort</th>
-                        <th scope="col">Participant</th>
-                        <th scope="col">Device</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for study in debug_studies %}
-                        <tr>
-                            <td>{{study.name}}</td>
-                        </tr>
-                        {% for cohort in study.cohorts %}
-                            <tr>
-                                <td></td>
-                                <td>{{cohort.name}}</td>
-                            </tr>
-                            {% for participant in cohort.participants %}
-                                <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td>{{participant.heartsteps_id}}</td>
-                                </tr>
-                                {% for device in participant.devices %}
-                                    <tr>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td>{{device.token}}</td>
-                                    </tr>
-                                {% endfor %}
-                            {% endfor %}
-                        {% endfor %}
-                    {% endfor %}
-                </tbody>
-            </table>
-        </div>
-    </div>
-    <div class="card">
-        <div class="card-header" id="heading5">    
-            <button class="btn btn-link" data-toggle="collapse" data-target="#collapse5" aria-expanded="true" aria-controls="collapse5">
-                <h4>Tools</h4>
-            </button>
-        </div>
-        <div id="collapse5" class="collapse cardmargin" aria-labelledby="heading5" data-parent="#accordion">
-            <ul>
-                <li>
-                    <form class="form-inline" action="{% url 'dashboard-dev-generic' %}" method="POST" role="form">
-                        {% csrf_token %}
-                        <input type="hidden" id="dev-command" value="send-notification" name="dev-command" />
-                        <div class="form-group mb-2">
-                            Send example notification to a test device.
-                        </div>
-                        <div class="form-group mx-sm-3 mb-2">
-                            <input type="text" class="form-control" id="playerid" name="playerid" placeholder="Player ID">
-                        </div>
-                        <button type="submit" class="btn btn-primary mb-2">Send</button>
-                    </form>
-                </li>
-
-
-
-
-                
-                <li>
-                    <form action="{% url 'dashboard-dev-generic' %}" method="POST" role="form">
-                        {% csrf_token %}
-                        <input type="hidden" id="dev-command" value="set-device-token" name="dev-command" />
-                        
-                        <div class="form-row">
-                            <div class="col">
-                                Set OneSignal Token to a participant.
-                            </div>
-                        </div>
-
-                        <div class="form-row">
-                            <div class="col">
-                                <select class="form-select form-control m-1" id="username" name="username">
-                                    <option selected>Select a User</option>
-                                    {% for puser in participant_users %}
-                                        <option value="{{puser.username}}">{{puser.study.name}} | {{puser.cohort.name}} | {{puser.username}}</option>
-                                    {% endfor %}
-                                </select>
-                            </div>
-                        </div>
-                        <div class="form-row">
-                            <div class="col">
-                                <input type="text" class="form-control m-1" id="playerid" name="playerid" placeholder="Player ID">
-                                <button type="submit" class="btn btn-primary mb-2 m-1">Set</button>
-                            </div>
-                        </div>
-                    </form>
-                </li>
-
-                <li>
-                    <form action="{% url 'dashboard-dev-generic' %}" method="POST" role="form">
-                        {% csrf_token %}
-                        <input type="hidden" id="dev-command" value="send-notification-to-user" name="dev-command" />
-                        
-                        <div class="form-row">
-                            <div class="col">
-                                Send test notification to a user.
-                            </div>
-                        </div>
-
-                        <div class="form-row">
-                            <div class="col">
-                                <select class="form-select form-control m-1" id="username" name="username">
-                                    <option selected>Select a User</option>
-                                    {% for puser in participant_users %}
-                                        <option value="{{puser.username}}">{{puser.study.name}} | {{puser.cohort.name}} | {{puser.username}}</option>
-                                    {% endfor %}
-                                </select>
-                            </div>
-                        </div>
-                        <div class="form-row">
-                            <div class="col">
-                                <button type="submit" class="btn btn-primary mb-2 m-1">Send</button>
-                            </div>
-                        </div>
-                    </form>
-                </li>
-            </ul>
-        </div>
-    </div>
-
-    <div class="card">
-        <div class="card-header" id="heading6">    
-            <button class="btn btn-link" data-toggle="collapse" data-target="#collapse6" aria-expanded="true" aria-controls="collapse6">
-                <h4>NLM-specific</h4>
-            </button>
-        </div>
-        <div id="collapse6" class="collapse cardmargin show" aria-labelledby="heading6" data-parent="#accordion">
-            <ul>
-                <li>
-                    <form action="{% url 'dashboard-dev-generic' %}" method="POST" role="form">
-                        {% csrf_token %}
-                        <input type="hidden" id="dev-command" value="assign-cohort-to-nlm" name="dev-command" />
-                        
-                        <div class="form-row">
-                            <div class="col">
-                                Select a cohort to assign NLM study.
-                            </div>
-                        </div>
-
-                        <div class="form-row">
-                            <div class="col">
-                                <select class="form-select form-control m-1" id="cohort-id" name="cohort-id">
-                                    <option selected>Select a Cohort</option>
-                                    {% for cohort in cohorts %}
-                                        <option value="{{cohort.id}}">{{cohort.study.name}} | {{cohort.name}}</option>
-                                    {% endfor %}
-                                </select>
-                            </div>
-                        </div>
-                        <div class="form-row">
-                            <div class="col">
-                                <button type="submit" class="btn btn-primary mb-2 m-1">Set</button>
-                            </div>
-                        </div>
-                    </form>
-                </li>
-            </ul>
-        </div>
-    </div>
-</div>
-
+    {% include 'dashboard/dev-front-card1.html' %}
+    {% include 'dashboard/dev-front-card2.html' %}
+    {% include 'dashboard/dev-front-card3.html' %}
+    {% include 'dashboard/dev-front-card4.html' %}
+    {% include 'dashboard/dev-front-card5.html' %}      <!-- Tools -->
+    {% include 'dashboard/dev-front-card6.html' %}      <!-- NLM Card -->
 
 {% else %}
 
