--- a/client/src/pages/settings/settings.component.html
+++ b/client/src/pages/settings/settings.component.html
@@ -33,7 +33,7 @@
         <li><button (click)="testWalkingSuggestion()">Send Walking Suggestion</button></li>
         <li><button (click)="testWalkingSuggestionSurvey()">Send Walking Suggestion Survey</button></li>
         <li><button (click)="testWeeklySurveyMessage()">Send Weekly Survey</button></li>
-        <li><button (click)="testLogFunction()">Test Log Function</button></li>
+        <li><button (click)="testNLMBlank()">Test NLM Blank Modal</button></li>
     </ul>
 </article>
 <article>
