--- a/client/src/pages/settings/settings.component.html
+++ b/client/src/pages/settings/settings.component.html
@@ -34,6 +34,7 @@
         <li><button (click)="testWalkingSuggestionSurvey()">Send Walking Suggestion Survey</button></li>
         <li><button (click)="testWeeklySurveyMessage()">Send Weekly Survey</button></li>
         <li><button (click)="testNLMBlank()">Test NLM Blank Modal</button></li>
+        <li><button (click)="nlmBoutPlanningModal()">Open up bout planning modal</button></li>
     </ul>
 </article>
 <article>
